--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -41,12 +41,12 @@
     <table class="job-listing">
         <tr th:each = "job : ${jobs}">
             <td>
-                <p th:text="${'ID: ' + job.id}"></p>
-                <p th:text="${'Name: ' + job.name}"></p>
-                <p th:text="${'Employer: ' + job.employer}"></p>
-                <p th:text="${'Location: ' + job.location}"></p>
-                <p th:text="${'Position Type: ' + job.positionType}"></p>
-                <p th:text="${'Skill: ' + job.coreCompetency}"></p>
+                <p th:text="${'ID: ' + job.getId()}"></p>
+                <p th:text="${'Name: ' + job.getName()}"></p>
+                <p th:text="${'Employer: ' + job.getEmployer()}"></p>
+                <p th:text="${'Location: ' + job.getLocation()}"></p>
+                <p th:text="${'Position Type: ' + job.getPositionType()}"></p>
+                <p th:text="${'Skill: ' + job.getCoreCompetency()}"></p>
             </td>
         </tr>
     </table>
